--- a/app/traefik-config/nextcloud.yml
+++ b/app/traefik-config/nextcloud.yml
@@ -33,4 +33,5 @@ http:
         customFrameOptionsValue: "SAMEORIGIN"
         browserXssFilter: true
         forceSTSHeader: true
-        frameDeny: true
+        frameDeny: true  # Attention a re mettre si header de websockets !
+        
