--- a/app/traefik-config/truenas.yml
+++ b/app/traefik-config/truenas.yml
@@ -16,7 +16,12 @@ http:
     truenas_service:
       loadBalancer:
         servers:
-          - url: "http://192.168.1.84"
+          - url: "https://192.168.1.84"
+        serversTransport: "webUiTruenas"
+
+  serversTransports:
+    webUiTruenas:
+      insecureSkipVerify: true
 
   middlewares:
     headers:
