--- a/app/traefik-config/matrix.yml
+++ b/app/traefik-config/matrix.yml
@@ -9,7 +9,8 @@ http:
         certresolver: letsencrypt-flare
       middlewares:
         - headers-matrix
-        - compress-matrix
+        - compress
+        - secure-headers
 
   services:
     matrix_service:
@@ -23,7 +24,3 @@ http:
         customRequestHeaders:
           Host: "matrix.thibaut-husser.com"
         contentTypeNosniff: true
-        browserXssFilter: true
-
-    compress-matrix:
-      compress: {}
