--- a/app/traefik-config/vaultwarden.yml
+++ b/app/traefik-config/vaultwarden.yml
@@ -9,8 +9,9 @@ http:
         certresolver: letsencrypt-flare
       middlewares:
         - headers-vaultwarden
-        - compress-vaultwarden
-        - websocket-vaultwarden
+        - compress
+        - websocket
+        - secure-headers
 
   services:
     vaultwarden_service:
@@ -24,13 +25,3 @@ http:
         customRequestHeaders:
           Host: "bitwarden.thibaut-husser.com"
         contentTypeNosniff: true
-        browserXssFilter: true
-
-    compress-vaultwarden:
-      compress: {}
-
-    websocket-vaultwarden:
-      headers:
-        customRequestHeaders:
-          Connection: Upgrade
-          Upgrade: WebSocket
