--- a/app/traefik-config/vpn.yml
+++ b/app/traefik-config/vpn.yml
@@ -9,7 +9,8 @@ http:
         certresolver: letsencrypt-flare
       middlewares:
         - headers-vpn
-        - compress-vpn
+        - compress
+        - secure-headers
 
   services:
     vpn_service:
@@ -23,7 +24,3 @@ http:
         customRequestHeaders:
           Host: "vpn.thibaut-husser.com"
         contentTypeNosniff: true
-        browserXssFilter: true
-
-    compress-vpn:
-      compress: {}
