--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - CF_API_KEY=${CF_API_TOKEN}
     command:
       - "--log.filePath=/var/log/traefik/traefik-service.log"
-      - "--log.level=DEBUG"
+      - "--log.level=info"
       - "--api.insecure=false"
       - "--api.dashboard=true"
       - "--entrypoints.web.address=:80"
@@ -37,10 +37,10 @@ services:
       - "--certificatesresolvers.letsencrypt-flare.acme.dnsChallenge.provider=cloudflare"
       - "--certificatesresolvers.letsencrypt-flare.acme.dnsChallenge.delayBeforeCheck=0"
       - "--certificatesresolvers.letsencrypt-flare.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53"
-      - "--certificatesresolvers.letsencrypt-home.acme.email=${ACME_EMAIL}"
-      - "--certificatesresolvers.letsencrypt-home.acme.storage=/certificates/acme-home.json"
-      - "--certificatesresolvers.letsencrypt-home.acme.caServer=https://acme-v02.api.letsencrypt.org/directory"
-      - "--certificatesresolvers.letsencrypt-home.acme.httpChallenge.entrypoint=web"
+      # - "--certificatesresolvers.letsencrypt-home.acme.email=${ACME_EMAIL}"
+      # - "--certificatesresolvers.letsencrypt-home.acme.storage=/certificates/acme-home.json"
+      # - "--certificatesresolvers.letsencrypt-home.acme.caServer=https://acme-v02.api.letsencrypt.org/directory"
+      # - "--certificatesresolvers.letsencrypt-home.acme.httpChallenge.entrypoint=web"
     labels:
         # Dashboard
       - "traefik.enable=true"
