suppression access token ha

--- a/app/traefik-config/middlewares/webhook.yml
+++ b/app/traefik-config/middlewares/webhook.yml
@@ -3,4 +3,4 @@ http:
     auth-webhook:
       headers:
         customRequestHeaders:
-          Authorization: "Bearer PCiofMlfLJmMzcgcFOS9luw7cOWbGahP94T/hrbHEYU="
+          Authorization: "Bearer "
