--- a/app/traefik-config/portainer.yml
+++ b/app/traefik-config/portainer.yml
@@ -1,7 +1,7 @@
 http:
   routers:
     portainer:
-      rule: "Host(`portainer.thibaut-husser.com`, `www.portainer.thibaut-husser.com`, `portainer.thusser.com`, `www.portainer.thusser.com`)"
+      rule: "Host(`portainer.thibaut-husser.com`) || Host(`www.portainer.thibaut-husser.com`) || Host(`portainer.thusser.com`) || Host(`www.portainer.thusser.com`)"
       entryPoints:
         - websecure
       service: portainer_service
