--- a/app/traefik-config/proxmox.yml
+++ b/app/traefik-config/proxmox.yml
@@ -1,7 +1,7 @@
 http:
   routers:
     proxmox:
-      rule: "Host(`proxmox.thibaut-husser.com`, `www.proxmox.thibaut-husser.com`, `proxmox.thusser.com`, `www.proxmox.thusser.com`)"
+      rule: "Host(`proxmox.thibaut-husser.com`) || Host(`www.proxmox.thibaut-husser.com`) || Host(`proxmox.thusser.com`) || Host(`www.proxmox.thusser.com`)"
       entryPoints:
         - websecure
       service: proxmox_service
