echec add metrics

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
   traefik:
-    image: "traefik:latest"
+    image: "traefik:3.3.4"
     restart: unless-stopped
     container_name: "traefik"
     ports:
       - "80:80"
       - "443:443"
+      - "8082:8082"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./certificates/acme.json:/certificates/acme.json:rw"
@@ -33,6 +34,7 @@ services:
       - "--providers.docker.exposedByDefault=false"
       - "--providers.file.directory=/etc/traefik"
       - "--providers.file.watch=true"
+      # - "--configFile=/etc/traefik/traefik.yml"
       - "--certificatesresolvers.letsencrypt-flare.acme.email=${ACME_EMAIL}"
       - "--certificatesresolvers.letsencrypt-flare.acme.storage=/certificates/acme.json"
       - "--certificatesresolvers.letsencrypt-flare.acme.caServer=https://acme-v02.api.letsencrypt.org/directory"
@@ -100,3 +102,32 @@ services:
       - "traefik.http.routers.homer.tls.certresolver=letsencrypt-flare"
       - "traefik.http.services.homer.loadbalancer.server.port=8080"
       - "traefik.http.routers.homer.middlewares=redirect-plex@file,redirect-nas@file,local-only@file,secure-headers@file,compress@file,force-real-ip@file"
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: unless-stopped
+    volumes:
+      - ./prometheus:/etc/prometheus
+    ports:
+      - "9090:9090"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    depends_on:
+      - traefik
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
+    user: "472:472"
+
