--- a/app/traefik-config/middlewares/local-only.yml
+++ b/app/traefik-config/middlewares/local-only.yml
@@ -1,7 +1,7 @@
 http:
   middlewares:
     local-only:
-      ipWhiteList:
+      ipAllowList:
         sourceRange:
           - "192.168.1.0/24"
           - "127.0.0.1/32"
