--- a/deploy-traefik.yml
+++ b/deploy-traefik.yml
@@ -23,6 +23,11 @@
         name: rsync
         state: present
 
+    # - name: Supprimer le dossier grafana avant copie
+    #   file:
+    #     path: "/home/{{ ansible_ssh_user }}/traefik-host/grafana"
+    #     state: absent
+
     - name: Copying app in ubuntu-docker
       become: false
       synchronize:
@@ -31,6 +36,15 @@
         rsync_opts:
           - "--exclude=certificates/acme.json"
           - "--exclude=certificates/acme-home.json"
+          # - "--chown=thibaut:thibaut"
+
+    # - name: Fix permissions on Grafana data folder
+    #   file:
+    #     path: "/home/{{ ansible_ssh_user }}/traefik-host/grafana"
+    #     owner: 472
+    #     group: 472
+    #     mode: '0755'
+    #     recurse: yes
 
     - name: Check if certificates/acme.json exists and is not empty
       become: false
